--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wingoflan/nodejsWebserver#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "express": "^4.16.2"
   }
 }
