--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/wingoflan/nodejsWebserver#readme",
   "dependencies": {
     "colors": "^1.1.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "log4js": "^2.3.7"
   }
 }
