--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "express": "^4.16.2",
-    "log4js": "^2.3.7"
+    "log4js": "^2.3.7",
+    "nodemailer": "^4.2.0"
   }
 }
