--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/wingoflan/nodejsWebserver#readme",
   "dependencies": {
-    "colors": "^1.1.2",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "log4js": "^2.3.7",
     "nodemailer": "^4.2.0"
