--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wingoflan/nodejsWebserver#readme",
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "log4js": "^2.3.7",
